# Project_Mireacle

./: Project_Mireacle.sln  README.md  TrTemp.txt  bakic  bakic.cpp  package-lock.json  package.json  temp.cpp
1st-semester/: README.md
1st-semester/KRs/: coin_change  input.txt  kr2.cpp  kr3  kr4.cpp  output.txt  temp
1st-semester/Method2/: main  main.cpp
1st-semester/Method3/: 1  1.cpp  Makefile  method3.h
1st-semester/Method4/: main  main.cpp  temp  temp.cpp
1st-semester/Method5/: main  sorts.h
1st-semester/contest1/: basic.cpp  nonbsic  verynobasic  verynobasic.cpp
1st-semester/simple shit/: nevergoon.cpp
2nd-semester/: temp  temp.cpp
2nd-semester/RT1/: hi  hi.cpp  main  main.cpp  node.hpp  task12.cpp  task7  task7.cpp  tasks  tasks.cpp  temp  temp.cpp  tree.hpp
2nd-semester/TIP/: main  main.cpp  rt1.hpp
3rd-semester/Disc-Math/: task1  task1.cpp  task1.txt  task1_out.txt
3rd-semester/Front-Back-End/: Ответы Ф-Б.md
4th-semester/Frontend-backend/: KR3.md
4th-semester/PoCS/Proxy-Project/: CMakeLists.txt  cacheManager.cpp  readme.md
4th-semester/PoCS/Proxy-Project/src/: cacheManager.h  main.cpp
Chorde method/: info.txt  main  main.cpp  realize.cpp
FreeCode/: EKZAMEN  EKZAMEN.cpp  help  help.cpp
KRs/: kr2  kr3.cpp  temp.cpp
Method2/: main  main.cpp
Method3/: 1  1.cpp  color.h  main  main.cpp  method3.h
Method4/: main  main.cpp
Method5/: main.cpp
Worklist2/: main  main.cpp
contest1/: BaBDataStack.h  Makefile  basic  basic.cpp  input.txt  nonbsic  nonbsic.cpp  output.txt  verynobasic  verynobasic.cpp
simple shit/: nevergoon
(+106 files in other folders)
